crates/saldo-ws/tests/saldo_ws_api/snapshots/saldo_ws_api__fullform__test_json_valid_input_returns_200-dv.snap
---
source: crates/saldo-ws/tests/saldo_ws_api/fullform.rs
expression: data
---
{
  "a": [],
  "c": "aä"
}
