crates/saldo-ws/tests/saldo_ws_api/snapshots/saldo_ws_api__fullform__test_json_valid_input_returns_200-dväljs.snap
---
source: crates/saldo-ws/tests/saldo_ws_api/fullform.rs
expression: data
---
{
  "a": [
    {
      "gf": "dväljas",
      "id": "dväljas..vb.1",
      "is": [],
      "msd": "pres ind s-form",
      "p": "vb_vs_dväljas",
      "pos": "vb"
    },
    {
      "gf": "dväljas",
      "id": "dväljas..vb.1",
      "is": [],
      "msd": "imper",
      "p": "vb_vs_dväljas",
      "pos": "vb"
    }
  ],
  "c": ""
}
